<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list"
        android:orientation="horizontal" >

        
        <Button
            android:id="@+id/battlebutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:text="@string/Battle" >
        </Button>

        <Button
            android:id="@+id/createTeamButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:text="@string/createTeam" >
        </Button>
        
        <Button
            android:id="@+id/manageTeamButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:text="@string/manageTeam" >
        </Button>
        
        <Button
            android:id="@+id/newbutton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:text="@string/createUnit" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <ListView
            android:id="@+id/teamListView"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:scrollbars="vertical" >
        </ListView>

        <GridView
            android:id="@+id/unitGridView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:columnWidth="144dp"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth" >
        </GridView>
    </LinearLayout>

</LinearLayout>